ultimo commit mudaça e implementaçao de diversas features